# tofu-firmware

./: platformio.ini  structure.md
components/audio_processing/: CMakeLists.txt  audio_input.cpp  i2s_config.cpp  library.json  pdm_processing.cpp
components/bluetooth/: CMakeLists.txt  bluetooth_manager.cpp
components/stt/: speech_recognizer.cpp
main/: audio_hal.cpp
tests/: CMakeLists.txt  audio_input.test.cpp  audio_input_convert.test.cpp  audio_input_final.test.cpp  ble_module.test.cpp  pdm_1.cpp  pdm_2.cpp  pdm_3.cpp  pdm_4.cpp  pdm_5.cpp  pdm_to_wav.test.cpp  sd_spi.test.cpp  sound.test.cpp  vad.test.cpp  voice-to-wav.test.cpp
